--- a/ClothingWebAPI/appsettings.json
+++ b/ClothingWebAPI/appsettings.json
@@ -1,13 +1,16 @@
 {
-  "ConnectionStrings": {
-    "CLOTHING_STORE_CONN": "Data Source=TUANBUI-NOV09; Initial Catalog=CLOTHING_STORE; User Id=sa; password=123"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
-}
+    "JWTSettings": {
+      "SecretKey": "tuanendersecretkeyjwt555"
+    },
+    "ConnectionStrings": {
+      "CLOTHING_STORE_CONN": "Data Source=TUANBUI-NOV09; Initial Catalog=CLOTHING_STORE; User Id=sa; password=123"
+    },
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "AllowedHosts": "*"
+  }
