--- a/ClothingWebAPI/appsettings.json
+++ b/ClothingWebAPI/appsettings.json
@@ -1,16 +1,30 @@
 {
-    "JWTSettings": {
-      "SecretKey": "tuanendersecretkeyjwt555"
-    },
-    "ConnectionStrings": {
-      "CLOTHING_STORE_CONN": "Data Source=TUANBUI-NOV09; Initial Catalog=CLOTHING_STORE; User Id=sa; password=123"
-    },
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft": "Warning",
-        "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-    "AllowedHosts": "*"
+  "JWTSettings": {
+    "SecretKey": "tuanendersecretkeyjwt555"
+  },
+  "ConnectionStrings": {
+    "CLOTHING_STORE_CONN": "Data Source=TUANBUI-NOV09; Initial Catalog=CLOTHING_STORE; User Id=sa; password=123"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "AllowedHosts": "*",
+  //"MailSettings": {
+  //  "Mail": "end.clothes.store@gmail.com",
+  //  "DisplayName": "END_CLOTHES",
+  //  "Password": "enaqdyqphtovtwks",
+  //  "Host": "smtp.gmail.com",
+  //  "Port": 587
+  //},
+  "EmailConfiguration": {
+    "From": "tuanbuinov09@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "Username": "tuanbuinov09@gmail.com",
+    "Password": "dhppqjdbmmenkmgx"
   }
+}
