--- a/ClothingWebAPI/appsettings.json
+++ b/ClothingWebAPI/appsettings.json
@@ -25,6 +25,6 @@
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
     "Username": "tuanbuinov09@gmail.com",
-    "Password": "dhppqjdbmmenkmgx"
+    "Password": "secret"
   }
 }
