truoc phan bien

--- a/ClothingWebAPI/appsettings.json
+++ b/ClothingWebAPI/appsettings.json
@@ -21,10 +21,10 @@
   //  "Port": 587
   //},
   "EmailConfiguration": {
-    "From": "tuanbuinov09@gmail.com",
+    "From": "end.clothes.2022@gmail.com",
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
-    "Username": "tuanbuinov09@gmail.com",
-    "Password": "dhppqjdbmmenkmgx"
+    "Username": "end.clothes.2022@gmail.com",
+    "Password": "gznpyoioelykgvmr"
   }
 }
